--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /QtTrainingApplication/glm/out/build/x64-Debug
+/QtTrainingApplication/test_models.7z
