--- a/QtTrainingApplication/QtTrainingApplication.vcxproj.filters
+++ b/QtTrainingApplication/QtTrainingApplication.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClCompile Include="BackgroundVideo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OpenGLSharedInfo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="widget.h">
